--- a/front-end/src/assets/css/global.css
+++ b/front-end/src/assets/css/global.css
@@ -8,3 +8,58 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.el-dialog {
+    box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
+    border-radius: 10px;
+}
+
+.el-dialog__header {
+    padding-bottom: 20px !important;
+    font-weight: bolder;
+    background-color: #4e8ffb;
+}
+
+.el-dialog__body {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.el-form {
+    margin: 1vh 10px;
+}
+
+.el-form-item {
+    font-weight: bolder;
+}
+
+.el-input__inner {
+    width: 180px;
+}
+
+.el-date-editor.el-input, .el-date-editor.el-input__inner {
+    width: 180px;
+}
+
+.el-table {
+    height: 78vh;
+    font-size: 14px;
+    padding-top: 1vh;
+    padding-left: 3vh;
+    padding-right: 3vh;
+}
+
+.el-table__header-wrapper {
+    font-size: 16px;
+}
+
+.el-table__row {
+    height: 7.4vh;
+}
+
+.el-pagination {
+    margin-top: 1vh;
+    display: flex;
+    justify-content: center;
+}
