--- a/front-end/src/assets/css/global.css
+++ b/front-end/src/assets/css/global.css
@@ -11,20 +11,10 @@ body {
     padding: 0;
 }
 
-
 /* form */
 .el-form-item {
     font-weight: bolder;
 }
-
-.el-input__inner {
-    width: 180px;
-}
-
-.el-date-editor.el-input, .el-date-editor.el-input__inner {
-    width: 180px;
-}
-
 
 /* breadcrumb */
 .el-breadcrumb {
@@ -240,7 +230,21 @@ body {
 
 .p-main-charts-search {
     flex: 1;
-    padding-top: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+.p-main-charts-search .el-form-item {
+    margin-bottom: 0 !important;
+}
+
+.p-main-charts-search .el-form--inline {
+    width: 100%;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 .p-main-charts-display {
@@ -254,9 +258,22 @@ body {
 
 .p-main-table-search {
     flex: 1;
-    align-self: flex-start;
-    padding-top: 20px;
-    padding-left: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+.p-main-table-search .el-form-item {
+    margin-bottom: 0 !important;
+}
+
+.p-main-table-search .el-form--inline {
+    width: 100%;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 10px;
 }
 
 .p-main-table {
