--- a/front-end/src/assets/css/global.css
+++ b/front-end/src/assets/css/global.css
@@ -79,8 +79,7 @@ body {
     height: 77vh;
     max-height: 77vh;
     overflow: auto !important;
-    padding-left: 20px;
-    padding-right: 20px;
+    border-radius: 10px;
 }
 
 .el-table th {
@@ -97,10 +96,6 @@ body {
     font-weight: bold;
     color: #606266;
     background-color: #fafafa !important;
-}
-
-.el-table::before {
-    height: 0 !important;
 }
 
 
@@ -221,6 +216,7 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    padding: 1vh 2vh;
     border-radius: 10px;
     box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
 }
